--- a/templates/home.html
+++ b/templates/home.html
@@ -50,7 +50,7 @@
     ("동대문구", True), ("중랑구", True), ("성북구", True), ("강북구", True), ("도봉구", False),
     ("노원구", False), ("은평구", True), ("서대문구", True), ("마포구", True), ("양천구", True),
     ("강서구", True), ("구로구", False), ("금천구", True), ("영등포구", True), ("동작구", True),
-    ("관악구", True), ("서초구", True), ("강남구", True), ("송파구", True), ("강동구", True)
+    ("관악구", True), ("서초구", True), ("강남구", True), ("송파구", True), ("강동구", False)
   ] %}
 
   {% for gu, has_data in gu_list %}
