수정 내용 : 검색 바에 테스트 괄호 추가

--- a/templates/map_generic.html
+++ b/templates/map_generic.html
@@ -49,7 +49,7 @@
             <h2>{{ gu or '서울시' }} 의류수거함 위치</h2>
           </header>
           <div id="search-box">
-            <input type="text" id="search-input" placeholder="주소 또는 장소 검색">
+            <input type="text" id="search-input" placeholder="주소 또는 장소 검색(수정하면 바뀌나 테스트 하는 괄호)">
             <button onclick="searchLocation()">검색</button>
           </div>
         </section>
