--- a/templates/map_generic.html
+++ b/templates/map_generic.html
@@ -1,3 +1,11 @@
+{% set gu_list = [
+	"종로구", "성동구", "광진구",
+	"동대문구", "중랑구",  "성북구",  "강북구",
+	"은평구", "서대문구",  "마포구", "양천구",
+	"강서구", "금천구",  "영등포구", "동작구",    
+	"관악구", "서초구", "강남구", "송파구",
+	] %}
+	<!-- 중구,용산구,도봉구,노원구,구로구,강동구 False-->
 <!DOCTYPE HTML>
 <html lang="ko">
 <head>
@@ -35,6 +43,10 @@
       <h2>메뉴</h2>
       <ul>
         <li><a href="/">홈으로</a></li>
+        {# 자치구 목록 #}
+        {% for g in gu_list %}
+        <li><a href="{{ url_for('map_page', gu=g) }}">{{ g }}</a></li>
+        {% endfor %}
         <li><a href="/admin">관리자 페이지</a></li>
       </ul>
     </nav>
