--- a/static/css/map.css
+++ b/static/css/map.css
@@ -5,8 +5,8 @@
   
   #info,
   #reviews {
-    width: 90%;
-    margin: 20px auto;
+    width: 100%;
+    margin: none;
   }
   
   textarea {
@@ -25,8 +25,8 @@
     background-color: white;
     padding: 10px;
     border: 1px solid #ccc;
-    width: 90%;
-    max-width: 600px;
+    width: 100%;
+    max-width: none;
     display: flex;
     justify-content: space-between;
     z-index: 5;
