관리자 대시보드 폰트 수정/관리자 권한 있을때에만  관리자 모드 진입 버튼 보이게 수정

--- a/templates/map_generic.html
+++ b/templates/map_generic.html
@@ -47,7 +47,10 @@
         {% for g in gu_list %}
         <li><a href="{{ url_for('map_page', gu=g) }}">{{ g }}</a></li>
         {% endfor %}
-        <li><a href="/admin">관리자 페이지</a></li>
+        {# admin로그인 했을때만 관리자 페이지 노출 #}
+        {% if session.get('admin') %}
+        <li><a href="{{ url_for('admin_entry') }}">관리자 페이지</a></li>
+        {% endif %}
       </ul>
     </nav>
 
