--- a/templates/admin_dashboard_generic.html
+++ b/templates/admin_dashboard_generic.html
@@ -14,14 +14,11 @@
 -->
 <html>
 	<head>
-		<title>Generic - Phantom by HTML5 UP</title>
+		<title>관리자 대시보드</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}"/>
 		<noscript><link rel="stylesheet"href="{{ url_for('static', filename='css/noscript.css') }}"/></noscript>
-		<style>
-			h1 { font-size:1.8rem; line-height:1.3; }
-		</style>
 	</head>
 	<body class="is-preload">
 				<!-- Header -->
@@ -30,7 +27,8 @@
 
 							<!-- Logo -->
 								<a href="/" class="logo">
-									<span class="symbol"><img src="{{ url_for('static', filename='images/logo.svg') }}" alt="" /></span><span class="title"> 서울시 의류수거함 지도 </span>
+									<span class="symbol"><img src="{{ url_for('static', filename='images/logo.svg') }}" alt="" /></span>
+									<span class="title"> SEOUL </span>
 								</a>
 
 							<!-- Nav -->
@@ -60,7 +58,7 @@
 				  <link rel="stylesheet" href="{{ url_for('static', filename='css/admin.css') }}">
 				</head>
 				<body>
-					<h1>관리자 대시보드</h1>
+					<h2 style="font-size: 1.6em;">관리자 대시보드</h2>
 					<button id="logoutBtn">로그아웃</button>
 
 					<h2>리뷰 관리</h2>
